[package]
name = "pomoneko"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
rand = "0.9.1"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars"]